<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/main_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_for_menu"
            android:textSize="35sp"
            android:layout_margin="20dp"
            android:padding="20dp"
            android:gravity="center_horizontal"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/buttonMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="20dp"
            android:textSize="35sp"
            android:text="@string/button_for_menu"
            android:gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:id="@+id/question1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_questions1"
            android:textSize="35sp"
            android:layout_margin="20dp"
            android:padding="20dp"
            android:gravity="center_horizontal"
            android:textStyle="bold"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/java"
                android:textSize="30sp"
                android:layout_margin="5dp"
                android:padding="5dp"/>
            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/java_script"
                android:textSize="30sp"
                android:layout_margin="5dp"
                android:padding="5dp"/>
            <RadioButton
                android:id="@+id/radio3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/python"
                android:textSize="30sp"
                android:layout_margin="5dp"
                android:padding="5dp"/>
            <RadioButton
                android:id="@+id/radio4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/c"
                android:textSize="30sp"
                android:layout_margin="5dp"
                android:padding="5dp"/>
        </RadioGroup>
        <Button
            android:id="@+id/button_question1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:padding="15dp"
            android:textSize="30sp"
            android:text="@string/next_questions"/>
    </LinearLayout>



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:id="@+id/question2">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_question2"
            android:textSize="35sp"
            android:layout_margin="20dp"
            android:padding="20dp"
            android:gravity="center_horizontal"
            android:textStyle="bold"/>

        <CheckBox
            android:id="@+id/check1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/java"
            android:textSize="30sp"
            android:layout_margin="5dp"
            android:padding="5dp"/>
        <CheckBox
            android:id="@+id/check2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/java_script"
            android:textSize="30sp"
            android:layout_margin="5dp"
            android:padding="5dp"/>
        <CheckBox
            android:id="@+id/check3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/python"
            android:textSize="30sp"
            android:layout_margin="5dp"
            android:padding="5dp"/>
        <CheckBox
            android:id="@+id/check4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/c"
            android:textSize="30sp"
            android:layout_margin="5dp"
            android:padding="5dp"/>
        <CheckBox
            android:id="@+id/check5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_sharp"
            android:textSize="30sp"
            android:layout_margin="5dp"
            android:padding="5dp"/>
        <CheckBox
            android:id="@+id/check6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rust"
            android:textSize="30sp"
            android:layout_margin="5dp"
            android:padding="5dp"/>
        <Button
            android:id="@+id/button_question2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:padding="15dp"
            android:textSize="30sp"
            android:text="@string/result"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="invisible"
        android:id="@+id/result">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result_string"
            android:textSize="35sp"
            android:layout_margin="20dp"
            android:padding="20dp"
            android:gravity="center_horizontal"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_margin="20dp"
            android:padding="20dp"
            android:gravity="center_horizontal" />
    </LinearLayout>

</FrameLayout>